--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,5 +1,14 @@
-all: 
+all:
+		$(CC) $(CFLAGS) -c $(SRC)
+		$(CC) $(CFLAGS) -o launch $(OBJ)
+		$(CC) $(CFLAGS) -c $(SRCT)
+		$(CC) $(CFLAGS) -o tube $(OBJT)
 launch:
+		$(CC) $(CFLAGS) -c $(SRC)
+		$(CC) $(CFLAGS) -o launch $(OBJ)
 tube:
+		$(CC) $(CFLAGS) -c $(SRC2)
+		$(CC) $(CFLAGS) -o tube $(OBJ2)
 clean:
+		rm -f launch tube $(OBJT) $(SRCT) $(OBJT) $(SRCT)
 
