--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,3 +1,9 @@
+CC=gcc
+CFLAGS=-g
+SRC=launch.c
+OBJ=launch.o
+SRCT=tube.c
+OBJT=tube.o
 all:
 		$(CC) $(CFLAGS) -c $(SRC)
 		$(CC) $(CFLAGS) -o launch $(OBJ)
@@ -7,8 +13,8 @@ launch:
 		$(CC) $(CFLAGS) -c $(SRC)
 		$(CC) $(CFLAGS) -o launch $(OBJ)
 tube:
-		$(CC) $(CFLAGS) -c $(SRC2)
-		$(CC) $(CFLAGS) -o tube $(OBJ2)
+		$(CC) $(CFLAGS) -c $(SRCT)
+		$(CC) $(CFLAGS) -o tube $(OBJT)
 clean:
 		rm -f launch tube $(OBJT) $(SRCT) $(OBJT) $(SRCT)
 
