--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -1,1 +1,12 @@
+CC=gcc
+CFLAGS=-g
 
+all:
+	$(EXECUTABLES)
+
+catcher:
+	$(CC) $(CFLAGS) -c catcher.c
+	$(CC) $(CFLAGS) -o $@ catcher.o
+
+clean:
+	rm -f $(EXECUTABLES) catcher.o
